remove gender everyone
